--- a/index.html
+++ b/index.html
@@ -2,9 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>임연주's portfolio</title>
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <![endif]-->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
- 임연주 포트폴리오당
+
+<div class="background-top"></div>
+<div class="container">
+<header>
+  <nav>
+    <ul class="menu">
+        <li>ABOUT ME</li>
+        <li>TOOLS</li>
+        <li>PORTFOLIO</li>
+        <li>CONTACT</li>
+    </ul>
+  </nav>
+</header>
+<div>내용시작</div>
+</div>
+
+<footer>Designed by Yeonju Lim - 2017&copy;</footer>
 </body>
 </html>
